# pit8c

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
pit38/: cli.py  main.py  models.py  trades_finder.py  utils.py  xlsx_io.py
pit38/brokers/: base.py  freedom24.py
pit38/io/: xlsx.py
pit38/positions/: profit_calculator.py  reports.py  trades_matcher.py
pit38/reports/: pit_8c.py
pit38/reports/templates/: PIT-8C.txt
pit8c/: __init__.py  api.py  cli.py  exceptions.py  main.py  models.py  pipeline.py  result.py
pit8c/brokers/: base.py  freedom24.py  registry.py  utils.py
pit8c/exchange/: nbp.py  provider.py  rates.py
pit8c/io/: xlsx.py
pit8c/positions/: profit_calculator.py  trades_matcher.py
pit8c/reports/: pit_8c.py
tests/: test_api_process_reports_path.py  test_api_process_trades.py  test_cli.py  test_tax_year_processing.py  test_trades_finder.py  test_trades_matcher.py  test_xlsx_io.py
tests/brokers/: test_freedom24.py  test_utils.py
tests/exchange/: test_nbp.py  test_rates.py
tests/io/: test_xlsx.py
tests/positions/: test_profit_calculator.py  test_trades_matcher.py
