[project]
name = "pit8c"
authors = [
    {name = "Ihar Yazerski", email = "ihar.yazerski@gmail.com"},
]
description = "A CLI tool that assists in preparing the PIT-8C declaration based on the annual tax reports from your broker"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = "0.0.3"
urls.homepage = "https://github.com/iyazerski/pit8c"
urls.repository = "https://github.com/iyazerski/pit8c"
dependencies = [
    "openpyxl>=3.1.5",
    "pydantic>=2.11.7",
    "pypdf>=5.8.0",
    "requests>=2.32.4",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "mypy>=1.17.0",
    "ruff>=0.12.4",
]

[tool.ruff]
line-length = 120
indent-width = 4
lint.select = ["ALL"]
lint.ignore = ["TRY", "PGH", "D", "DOC", "TD", "C90", "FLY", "EM", "G", "PERF401", "DTZ", "RET501", "COM", "S101", "FBT", "PLR2004", "SIM108", "PLR0913", "BLE001", "ANN401", "FIX002", "FA102", "E501", "B905", "PLR0912", "PLR0911", "N999"]
lint.isort.combine-as-imports = true
format.quote-style = "double"
