[project]
name = "pit8c"
authors = [
    {name = "Ihar Yazerski", email = "ihar.yazerski@gmail.com"},
]
description = "A CLI tool that assists in preparing the PIT-8C declaration based on the annual tax reports from your broker"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
version = "0.1.0"
dependencies = [
    "openpyxl>=3.1.5",
    "pydantic>=2.11.7",
    "pypdf>=5.8.0",
    "requests>=2.32.4",
    "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/iyazerski/pit8c"
Repository = "https://github.com/iyazerski/pit8c"

[project.scripts]
pit8c = "pit8c.cli:app"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "ty>=0.0.14",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
src = ["src"]
exclude = [
    ".env",
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    ".github",
    ".idea",
    ".kube",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["TRY","PGH","D","DOC","TD","C90","FLY","EM","G","PERF401","DTZ","RET501","COM","S101","S105","FBT","PLR2004","SIM108","PLR0913","BLE001","ANN401","FIX002","FA102","E501","B905","PLR0912","PLR0911","N999","PERF203","B019","S311","S608","PLR0915","T201", "PLW0603", "RUF001", "RUF002", "RUF003", "TC001", "TC002", "TC003"]

[tool.ruff.format]
quote-style = "double"
